--- a/templates/tab-coupon.html
+++ b/templates/tab-coupon.html
@@ -6,7 +6,7 @@
     <ion-content class="padding">
         <ion-refresher pulling-text="刷新中" on-refresh="doRefresh()">
         </ion-refresher>
-        <ion-item class="product bordLine list  borderRadius" collection-repeat="item in items | reverse">
+        <div class="product bordLine list  borderRadius" collection-repeat="item in items | reverse">
             <a href="#/tab/coupon-detail/{{item.id}}" class=" item item-thumbnail-left borderRadius5">
                 <img class="product_image" ng-src="{{ item.image }}">
                 <div class="category" ng-if="item.numbers>0">剩{{item.numbers}}</div>
@@ -19,7 +19,7 @@
                     <li class="productDate">{{item.timeLimit|date:'至yyyy年MM月dd日'}}</li>
                 </ul>
             </a>
-        </ion-item>
+        </div>
     </ion-content>
 </ion-view>
 
