--- a/templates/tab-types-detail-coupon.html
+++ b/templates/tab-types-detail-coupon.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<ion-view title="{{coupon.name}}">
+<ion-view title="<b>{{coupon.name}}">
     <ion-content has-header="true" padding="true">
         <div class="list card pink" >
 
