--- a/templates/tab-types.html
+++ b/templates/tab-types.html
@@ -5,7 +5,7 @@
   </ion-nav-buttons>
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="type in types" type="item-text-wrap" href="#/tab/type/{{type.id}}">
+      <ion-item class="typeListItem" ng-repeat="type in types" type="item-text-wrap" href="#/tab/type/{{type.id}}">
         {{type.name}}
       </ion-item>
     </ion-list>
