--- a/templates/tab-coupon.html
+++ b/templates/tab-coupon.html
@@ -14,9 +14,9 @@
                 <div class="category ion-heart" ng-if="find(item) ">已领</div>
 
                 <ul>
-                    <li class="productName">{{item.name}}</li>
-                    <li class="productIntroduction">{{item.productIntroduction}}</li>
-                    <li class="productDate">{{item.timeLimit|date:'至yyyy年MM月dd日'}}</li>
+                    <li  lang="zh-cn" class="productName">{{item.name}}</li>
+                    <li  lang="zh-cn" class="productIntroduction">{{item.productIntroduction}}</li>
+                    <li  lang="zh-cn" class="productDate">{{item.timeLimit|date:'至yyyy年MM月dd日'}}</li>
                 </ul>
             </a>
         </div>
