--- a/css/style.css
+++ b/css/style.css
@@ -1,164 +1,316 @@
+.bar.bar-positive .title{
+    font-size: 22px;
+    font-weight: bolder;
+    font-family: "Hiragino Sans GB","Helvetica Neue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, 微软雅黑, 宋体, 楷体_GB2312, 隶书;
+}
+
 body {
-    background-color: pink;
+    background-color: #FAEDF0;
     overflow: scroll;
 }
 
 .bordLine {
+
     border-style: solid;
-    border-color: pink;
+
+    border-color: #FAEDF0;
+
     padding: 5px 0px;
+
 }
 
 .item {
+
     padding-top: 0;
+
     padding-right: 0;
+
     top: 0;
 
 }
 
-.item-thumbnail-left > img:first-child, .item-thumbnail-left .item-image, .item-thumbnail-left .item-content > img:first-child, .item-thumbnail-left .item-content .item-image {
-    top: 0;
-    padding-top: 0;
-    padding-right: 0;
-}
+.item-thumbnail-left > img:first-child,
 
+.item-thumbnail-left .item-image,
+
+.item-thumbnail-left .item-content > img:first-child,
+
+.item-thumbnail-left .item-content .item-image {
+
+    top: 0;
+
+    padding-top: 0;
+
+    padding-right: 0;
+
+}
 
 .bordLineLast {
+
     border-bottom-width: 1px;
+
 }
 
 .productName {
+
     padding-top: 12px;
+
     font-size: 16px;
+
     font-weight: bold;
-    color: #FF69B4;
+
+    color: #444;
+    font-family: "Hiragino Sans GB","Helvetica Neue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, 微软雅黑, 宋体, 楷体_GB2312, 隶书;
+
 }
 
 .category {
+
     float: right;
+
     font-size: 16px;
+
     margin: 3px;
+
     top: 0;
+
     right: 0;
-    color: #FF69B4;
+
+    color: #444;
+
     font-weight: bold;
+
+    font-family: "Hiragino Sans GB","Helvetica Neue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, 微软雅黑, 宋体, 楷体_GB2312, 隶书;
+
 }
 
 .productIntroduction {
+
     line-height: 1.5em;
+
     height: 3em;
+
     overflow: hidden;
+
     padding: 0 20px 0 0;
+
     font-size: 15px;
+
     white-space: normal;
-    color: #FF69B4;
+
+    color: #444;
+
     font-weight: bold;
 
+    font-family: "Hiragino Sans GB","Helvetica Neue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, 微软雅黑, 宋体, 楷体_GB2312, 隶书;
 }
 
 .productDate {
+
     text-align: center;
+
     font-size: 16px;
+
     font-weight: bold;
-    color: #FF69B4;
+
+    color: #444;
+
+    font-family: "Hiragino Sans GB","Helvetica Neue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, 微软雅黑, 宋体, 楷体_GB2312, 隶书;
+
 }
 
 .list {
+
     margin-bottom: 0;
 
 }
 
 .product_image {
+
     margin-top: 12px;
+
 }
 
 ion-content {
-    background-color: pink;
+
+    background-color: #FAEDF0;
+
 }
 
-
-
 .buttons.left-buttons {
+
     width: 40px;
+
     height: 34px;
+
     display: block;
+
 }
 
 .borderRadius5 {
+
     border-radius: 5px 5px 5px 5px;
+
 }
 
 .borderRadius {
+
     border-radius: 5px 5px 5px 5px;
+
 }
 
 .highIndex {
+
     z-index: 100000;
+
     width: 100px;
+
     height: 100px;
+
     top: 0;
+
     left: 0;
+
     position: fixed;
 
 }
 
-.bar-stable .button, .bar.bar-stable .title {
-    color: #fff;
+.bar-stable .button,
+
+.bar.bar-stable .title {
+
+    color: #444;
+
     font-weight: bold;
+
+    font-family: "Hiragino Sans GB","Helvetica Neue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, 微软雅黑, 宋体, 楷体_GB2312, 隶书;
+
+
 }
 
 .pink {
-    background-color: pink;
+
+    background-color: #FAEDF0;
+
 }
 
 .list.card.pink {
 
     margin-top: 0;
+
     margin-bottom: 0;
+
 }
 
 div.item.item-avatar {
+
     padding-left: 20px;
+
     padding-top: 20px;
+
+    font-family: "Hiragino Sans GB","Helvetica Neue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, 微软雅黑, 宋体, 楷体_GB2312, 隶书;
+
+
 }
 
 div.item.item-body {
 
     padding: 1px;
+
 }
+
 div.scroll.padding {
-    background-color: pink;
+
+   background-color: #FAEDF0;
+
 }
 
-.item-body h1, .item-body h2, .item-body h3, .item-body h4, .item-body h5, .item-body h6, .item-body p{
+.item-body h1,
+
+.item-body h2,
+
+.item-body h3,
+
+.item-body h4,
+
+.item-body h5,
+
+.item-body h6,
+
+.item-body p {
+
     padding: 3px 3px;
-margin:0;
-}
-.addToCart {
-    width: 130px;
-    position: absolute;
-    top: 20px;
-    right: 0px;
+
+    margin: 0;
+
 }
 
-.card .item:first-child, .list-inset .item:first-child, .padding > .list .item:first-child {
+
+.addToCart {
+
+    width: 130px;
+
+    position: absolute;
+
+    top: 20px;
+
+    right: 0px;
+
+}
+
+.card .item:first-child,
+
+.list-inset .item:first-child,
+
+.padding > .list .item:first-child {
+
     border-top-left-radius: 5px;
+
     border-top-right-radius: 5px;
 
 }
 
-.item{
+.item {
+
     border-radius: 5px;
 
-
-
 }
 
-.item-complex .item-content, .item-radio .item-content{
+.item-complex .item-content,
+
+.item-radio .item-content {
 
     padding: 16px 0;
-    font-size: 16px;
+
+    font-size: 22px;
+
     text-align: center;
+
+    font-weight: 100;
 }
 
+.tabs-positive .tabs,
+.tabs-positives,
+.bar.bar-positive,
+.tabs-icon-top > .tabs .tab-item, .tabs-icon-top.tabs .tab-item, .tabs-icon-bottom > .tabs .tab-item, .tabs-icon-bottom.tabs .tab-item{
+
+    background-color: #6DA6FC;
+
+}
+
+.bar.bar-positive {
+
+    background-color: #6DA6FC;
+
+}
+
+.typeListItem{
+    margin:8px,0;
+}
+
+.item p{
+
+    color: #444;
+    font-size: 16px;
+}
 
