--- a/templates/tab-favoriteList.html
+++ b/templates/tab-favoriteList.html
@@ -10,9 +10,9 @@
         <img class="product_image" ng-src="{{ item.image }}">
         <div class="category ion-heart">已领取</div>
         <ul>
-          <li class="productName"><b>{{item.name}}</li>
-          <li class="productIntroduction"><b>{{item.productIntroduction}}</li>
-          <li class="productDate">{{item.timeLimit|date:'至yyyy年MM月dd日'}}</li>
+          <li  lang="zh-cn" class="productName"><b>{{item.name}}</li>
+          <li  lang="zh-cn" class="productIntroduction"><b>{{item.productIntroduction}}</li>
+          <li  lang="zh-cn" class="productDate">{{item.timeLimit|date:'至yyyy年MM月dd日'}}</li>
         </ul>
       </a>
     </div>
