--- a/templates/tab-types-couponList.html
+++ b/templates/tab-types-couponList.html
@@ -9,15 +9,15 @@
     <div class="product bordLine list  borderRadius" collection-repeat="item in items | reverse | filter:type.category :strict">
       <a href="#/tab/tab-types-couponList-detail/{{item.id}}" class=" item item-thumbnail-left borderRadius5">
         <img class="product_image" ng-src="{{ item.image }}">
-        <div class="category" ng-if="item.numbers>0">剩{{item.numbers}}</div>
-        <div class="category" ng-if="item.numbers<=0">没有剩余</div>
+        <div lang="zh-cn" class="category" ng-if="item.numbers>0">剩{{item.numbers}}</div>
+        <div lang="zh-cn" class="category" ng-if="item.numbers<=0">没有剩余</div>
 
         <div class="category ion-heart" ng-if="find(item)">已领</div>
 
         <ul>
-          <li class="productName"><b>{{item.name}}</li>
-          <li class="productIntroduction"><b>{{item.productIntroduction}}</li>
-          <li class="productDate">{{item.timeLimit|date:'至yyyy年MM月dd日'}}</li>
+          <li lang="zh-cn" class="productName"><b>{{item.name}}</li>
+          <li lang="zh-cn" class="productIntroduction"><b>{{item.productIntroduction}}</li>
+          <li lang="zh-cn" class="productDate">{{item.timeLimit|date:'至yyyy年MM月dd日'}}</li>
         </ul>
       </a>
     </div>
