--- a/templates/tab-coupon.html
+++ b/templates/tab-coupon.html
@@ -9,9 +9,9 @@
         <div class="product bordLine list  borderRadius" collection-repeat="item in items | reverse">
             <a href="#/tab/coupon-detail/{{item.id}}" class=" item item-thumbnail-left borderRadius5">
                 <img class="product_image" ng-src="{{ item.image }}">
-                <div class="category" ng-if="item.numbers>0">剩{{item.numbers}}</div>
-                <div class="category" ng-if="item.numbers<=0">没有剩余</div>
-                <div class="category ion-heart" ng-if="find(item) ">已领</div>
+                <div lang="zh-cn" class="category" ng-if="item.numbers>0">剩{{item.numbers}}</div>
+                <div lang="zh-cn" class="category" ng-if="item.numbers<=0">没有剩余</div>
+                <div lang="zh-cn" class="category ion-heart" ng-if="find(item) ">已领</div>
 
                 <ul>
                     <li  lang="zh-cn" class="productName">{{item.name}}</li>
